Rename FabricClient package and use Twitter sample sourceSet
* Rename FabricClient to com.example.app to match Twitter sample
* Include Twitter Kit sample sources via sourceSets
* Prefix some Twitter sample resources to avoid merge duplicates

Change-Id: I9992ae7ebce8b210a3703ead213ee62403fa6179

--- a/samples/app/src/main/res/layout/tweetui_fragment_tweet_preview.xml
+++ b/samples/app/src/main/res/layout/tweetui_fragment_tweet_preview.xml
@@ -1,37 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/FillParent"
+    style="@style/twitter_FillParent"
     android:orientation="vertical">
 
     <EditText
         android:id="@+id/selector_input_tweet_id"
-        style="@style/FillWidth"
+        style="@style/twitter_FillWidth"
         android:inputType="number"
         android:hint="@string/selector_input_hint"/>
 
     <LinearLayout
-        style="@style/FillWidth"
+        style="@style/twitter_FillWidth"
         android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_show_light"
-            style="@style/WrapContent"
+            style="@style/twitter_WrapContent"
             android:text="@string/button_show_light"/>
 
         <Button
             android:id="@+id/button_show_dark"
-            style="@style/WrapContent"
+            style="@style/twitter_WrapContent"
             android:text="@string/button_show_dark"/>
 
     </LinearLayout>
 
     <ScrollView
-        style="@style/FillParent">
+        style="@style/twitter_FillParent">
 
         <LinearLayout
             android:id="@+id/tweet_region"
-            style="@style/FillWidth"
+            style="@style/twitter_FillWidth"
             android:orientation="vertical"/>
 
     </ScrollView>
