Fix FabricClient lint warnings from Twitter sample inclusion
Change-Id: Iff7b463ee654e04dea0b3af00d27b5c71fcc9f93

--- a/samples/app/src/main/res/menu/twitter_activity_actions.xml
+++ b/samples/app/src/main/res/menu/twitter_activity_actions.xml
@@ -16,7 +16,9 @@
   ~
   -->
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:tools="http://schemas.android.com/tools">
+<menu
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="UnusedResources">
 
 </menu>
