--- a/samples/app/src/main/res/layout/twitter_activity.xml
+++ b/samples/app/src/main/res/layout/twitter_activity.xml
@@ -16,11 +16,13 @@
   ~
   -->
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:context=".MainActivity">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    tools:ignore="UnusedResources">
 
     <LinearLayout
         android:id="@+id/main_layout"
