Make TweetView images full width on API <17
* Replace ImageView with AspectRatioImageView

Jira-Id: TFW-5068
Change-Id: I76fa9e480e1a964c60a2837b32de6683bb2de605

--- a/tweet-ui/src/main/res/layout/tw__tweet.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet.xml
@@ -22,11 +22,10 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <ImageView
+    <com.twitter.sdk.android.tweetui.internal.util.AspectRatioImageView
         tools:ignore="ContentDescription"
         android:id="@+id/tw__tweet_media"
-        style="@style/tw__TweetMedia"
-        android:adjustViewBounds="true"/>
+        style="@style/tw__TweetMedia"/>
 
     <TextView
         android:id="@+id/tw__tweet_retweeted_by"
