--- a/tweet-ui/src/main/res/values/attrs.xml
+++ b/tweet-ui/src/main/res/values/attrs.xml
@@ -23,11 +23,19 @@
         <attr name="tw__primary_text_color" format="color"/>
         <attr name="tw__action_color" format="color"/>
     </declare-styleable>
+
     <declare-styleable name="tw__AspectRatioImageView">
         <attr name="tw__image_aspect_ratio" format="float"/>
         <attr name="tw__image_dimension_to_adjust" format="enum">
             <enum name="height" value="0"/>
             <enum name="width" value="1"/>
         </attr>
+    </declare-styleable>
+
+    <declare-styleable name="ToggleImageButton">
+        <attr name="state_toggled_on" format="boolean"/>
+        <attr name="contentDescriptionOn" format="string"/>
+        <attr name="contentDescriptionOff" format="string"/>
+        <attr name="toggleOnClick" format="boolean"/>
     </declare-styleable>
 </resources>
