Add Tweet actions for Tweet views
* Add tweet_actions_enabled attribute (feature switched off)
* Share button launches Android share intent
* Favorite button toggles with stub action

Change-Id: I775b1d8fb59a0fc06fdaa1eafd30410476e27413

--- a/tweet-ui/src/main/res/layout/tw__tweet.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet.xml
@@ -73,7 +73,7 @@
         android:layout_alignBottom="@id/tw__tweet_author_avatar"
         android:layout_toRightOf="@id/tw__tweet_author_avatar"
         android:layout_toEndOf="@id/tw__tweet_author_avatar"
-        tools:text="@jack"/>
+        tools:text="\@jack"/>
 
     <TextView
         android:id="@+id/tw__tweet_timestamp"
@@ -99,5 +99,11 @@
         android:layout_below="@id/tw__tweet_text"
         android:visibility="gone"
         tools:visibility="visible"/>
+
+    <include
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tw__tweet_share"
+        layout="@layout/tw__action_bar" />
 
 </RelativeLayout>
