Add TweetTimelineListAdapter.Builder setViewStyle and action styles
* Show Tweet actions in some Tweet and Timeline client examples

Change-Id: I0efdd87321078e686eb82c37d075a4ee5e4b7708

--- a/tweet-ui/src/main/res/values/styles.xml
+++ b/tweet-ui/src/main/res/values/styles.xml
@@ -24,10 +24,18 @@
         <item name="tw__action_color">@color/tw__tweet_action_color</item>
     </style>
 
+    <style name="tw__TweetLightWithActionsStyle" parent="tw__TweetLightStyle">
+        <item name="tw__tweet_actions_enabled">true</item>
+    </style>
+
     <style name="tw__TweetDarkStyle">
         <item name="tw__container_bg_color">@color/tw__tweet_dark_container_bg_color</item>
         <item name="tw__primary_text_color">@color/tw__tweet_dark_primary_text_color</item>
         <item name="tw__action_color">@color/tw__tweet_action_color</item>
+    </style>
+
+    <style name="tw__TweetDarkWithActionsStyle" parent="tw__TweetDarkStyle">
+        <item name="tw__tweet_actions_enabled">true</item>
     </style>
 
 </resources>
