Update the Twitter Kit sample app and appcompat
Change-Id: Id10a15b0bef7b59aa07909cab8e39a6e6876cc50

--- a/samples/app/src/main/res/values/colors.xml
+++ b/samples/app/src/main/res/values/colors.xml
@@ -1,4 +1,8 @@
 <resources>
+    <color name="app_primary">#2196F3</color>
+    <color name="app_primary_dark">#1976D2</color>
+    <color name="app_accent">#55acee</color>
+
     <color name="twitter_blue">#ff55acee</color>
     <color name="twitter_dark">#ff292f33</color>
     <color name="solid_red">#ff0000</color>
