--- a/samples/app/src/main/res/layout/tweetui_activity_main.xml
+++ b/samples/app/src/main/res/layout/tweetui_activity_main.xml
@@ -6,34 +6,28 @@
     android:gravity="center">
 
     <Button
+        android:id="@+id/button_tweet_preview_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/preview_tweet"/>
+
+    <Button
         android:id="@+id/button_xml_tweet_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_xml_tweet_activity"/>
+        android:text="@string/xml_tweets_activity"/>
 
     <Button
         android:id="@+id/button_tweet_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_tweet_activity"/>
+        android:text="@string/tweets_activity"/>
 
     <Button
         android:id="@+id/button_unique_tweet_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_unqiue_tweet_activity"/>
-
-    <Button
-        android:id="@+id/button_tweet_list_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_tweet_list_activity"/>
-
-    <Button
-        android:id="@+id/button_timeline_activity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_timeline_activity"/>
+        android:text="@string/unqiue_tweets"/>
 
     <Button
         android:id="@+id/button_timelines_activity"
@@ -42,9 +36,15 @@
         android:text="@string/button_timelines_activity"/>
 
     <Button
-        android:id="@+id/button_tweet_preview_activity"
+        android:id="@+id/button_fixed_timeline_activity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_tweet_preview_activity"/>
+        android:text="@string/fixed_timeline"/>
+
+    <Button
+        android:id="@+id/button_refresh_timeline_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/refresh_timeline"/>
 
 </LinearLayout>
