--- a/samples/app/src/main/res/layout/activity_pager.xml
+++ b/samples/app/src/main/res/layout/activity_pager.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Activity layout containing a single ViewPager-->
-<android.support.v4.view.ViewPager
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/pager"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
-    <android.support.v4.view.PagerTabStrip
-        android:id="@+id/pager_title_strip"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tab_layout"
+        style="@style/twitter_Tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        android:background="@color/twitter_blue"
-        android:textColor="@android:color/white"
-        android:paddingTop="@dimen/pager_top_padding"
-        android:paddingBottom="@dimen/pager_bottom_padding"/>
+        android:paddingTop="@dimen/pager_top_padding"/>
 
-</android.support.v4.view.ViewPager>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="0px"
+        android:layout_weight="1"/>
+</LinearLayout>
