--- a/samples/app/src/main/res/values/dimens.xml
+++ b/samples/app/src/main/res/values/dimens.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="pager_top_padding">7dp</dimen>
-    <dimen name="pager_bottom_padding">7dp</dimen>
     <dimen name="demo_tweet_space">15dp</dimen>
     <dimen name="divider_height">1dp</dimen>
+    <dimen name="tab_padding">16dp</dimen>
 </resources>
