--- a/samples/app/src/main/res/values/styles.xml
+++ b/samples/app/src/main/res/values/styles.xml
@@ -42,4 +42,18 @@
         <item name="android:background">?android:attr/listDivider</item>
     </style>
 
+    <style name="twitter_Tab" parent="Widget.Design.TabLayout">
+        <item name="android:background">@color/twitter_blue</item>
+        <item name="tabIndicatorColor">@android:color/white</item>
+        <item name="tabTextAppearance">@style/twitter_TabTextAppearance</item>
+        <item name="tabSelectedTextColor">@android:color/white</item>
+        <item name="tabPaddingStart">@dimen/tab_padding</item>
+        <item name="tabPaddingEnd">@dimen/tab_padding</item>
+        <item name="tabMode">scrollable</item>
+    </style>
+
+    <style name="twitter_TabTextAppearance" parent="TextAppearance.Design.Tab">
+        <item name="android:textColor">@android:color/white</item>
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
