--- a/samples/app/src/main/res/layout/tweetcomposer_activity_main.xml
+++ b/samples/app/src/main/res/layout/tweetcomposer_activity_main.xml
@@ -4,6 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
