--- a/samples/app/src/main/res/layout/tweetui_swipe_timeline.xml
+++ b/samples/app/src/main/res/layout/tweetui_swipe_timeline.xml
@@ -8,8 +8,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="5dp">
+        android:orientation="vertical">
+
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar"/>
 
         <ListView
             android:id="@id/android:list"
