--- a/samples/app/src/main/res/values/styles.xml
+++ b/samples/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!--Application theme-->
-    <style name="TwitterSampleTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="TwitterSampleTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!--colorPrimary is used for the action bar-->
         <item name="colorPrimary">@color/app_primary</item>
         <!--colorPrimaryDark is used for the status bar-->
