Add Tweet Composer Activity UI
Change-Id: I8cb95ab973bc2bde423de325de9205fc1d34f4d4

--- a/samples/app/src/main/res/layout/tweetcomposer_activity_main.xml
+++ b/samples/app/src/main/res/layout/tweetcomposer_activity_main.xml
@@ -8,10 +8,23 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:onClick="onTweet"
-        android:text="@string/tweet"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:gravity="center">
+
+        <Button
+            android:id="@+id/tweet_composer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/twitter_composer"/>
+
+        <Button
+            android:id="@+id/organic_composer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/twitter_kit_composer"/>
+
+    </LinearLayout>
 </RelativeLayout>
