Add app install card preview
* Update sample application
* Update ComposerActivity builder

Change-Id: If71529befd0e8e56afcd4dd238c6e4d0d4d8d856

--- a/tweet-composer/src/main/res/drawable/tw__install_button_border.xml
+++ b/tweet-composer/src/main/res/drawable/tw__install_button_border.xml
@@ -15,10 +15,12 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="tw__composer_hint">What\'s Happening?</string>
-    <string name="tw__post_tweet">Tweet</string>
-    <string name="tw__max_tweet_chars">140</string>
-    <string name="tw__play_store">Play Store</string>
-    <string name="tw__install">Install</string>
-</resources>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:radius="@dimen/tw__corner_radius_small"/>
+    <stroke
+        android:width="2dp"
+        android:color="@color/tw__light_gray"/>
+</shape>
