--- a/tweet-composer/src/main/res/layout/tw__composer_view.xml
+++ b/tweet-composer/src/main/res/layout/tw__composer_view.xml
@@ -15,10 +15,11 @@
   ~ limitations under the License.
   -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/tw__composer_header"
@@ -26,35 +27,56 @@
         android:layout_height="wrap_content">
 
         <ImageButton
-            tools:ignore="ContentDescription"
             android:id="@+id/tw__composer_close"
-            style="@style/tw__ComposerClose"/>
+            style="@style/tw__ComposerClose"
+            tools:ignore="ContentDescription"/>
 
         <ImageView
-            tools:ignore="ContentDescription"
             android:id="@+id/tw__twitter_logo"
             style="@style/tw__TwitterLogo"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            tools:ignore="ContentDescription"/>
 
         <ImageView
-            tools:ignore="ContentDescription"
             android:id="@+id/tw__author_avatar"
             style="@style/tw__ComposerAvatar"
-            tools:background="@color/tw__tweet_media_preview_bg_color"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
+            tools:background="@color/tw__tweet_media_preview_bg_color"
+            tools:ignore="ContentDescription"/>
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/tw__edit_tweet"
-        style="@style/tw__EditTweet"
-        android:layout_below="@id/tw__composer_header"
-        android:layout_above="@+id/tw__composer_toolbar_divider"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:overScrollMode="never">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/tw__edit_tweet"
+                style="@style/tw__EditTweet"/>
+
+            <FrameLayout
+                android:id="@+id/tw__card_view"
+                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/tw__card_spacing_large"/>
+        </LinearLayout>
+    </ScrollView>
+
+    <View
+        android:id="@+id/tw__composer_toolbar_divider"
+        style="@style/tw__ComposerDivider"/>
 
     <LinearLayout
         android:id="@+id/tw__composer_toolbar"
-        style="@style/tw__ComposerToolbar"
-        android:layout_alignParentBottom="true">
+        style="@style/tw__ComposerToolbar">
 
         <TextView
             android:id="@+id/tw__char_count"
@@ -66,9 +88,4 @@
 
     </LinearLayout>
 
-    <View
-        android:id="@+id/tw__composer_toolbar_divider"
-        style="@style/tw__ComposerDivider"
-        android:layout_above="@id/tw__composer_toolbar"/>
-
-</RelativeLayout>
+</LinearLayout>
