--- a/tweet-composer/src/main/res/drawable/tw__app_info_layout_border.xml
+++ b/tweet-composer/src/main/res/drawable/tw__app_info_layout_border.xml
@@ -15,10 +15,15 @@
   ~ limitations under the License.
   -->
 
-<resources>
-    <string name="tw__composer_hint">What\'s Happening?</string>
-    <string name="tw__post_tweet">Tweet</string>
-    <string name="tw__max_tweet_chars">140</string>
-    <string name="tw__play_store">Play Store</string>
-    <string name="tw__install">Install</string>
-</resources>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners
+        android:bottomLeftRadius="@dimen/tw__corner_radius_medium"
+        android:bottomRightRadius="@dimen/tw__corner_radius_medium"
+        android:topLeftRadius="0dp"
+        android:topRightRadius="0dp"/>
+    <stroke
+        android:width="1dp"
+        android:color="@color/tw__light_gray"/>
+</shape>
