Move AspectRatioImageView from tweet-ui to twitter-core
Change-Id: I83ff30cef0ddd4b29d125e8501bda7f3c4250ee2

--- a/tweet-ui/src/main/res/layout/tw__tweet.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet.xml
@@ -22,7 +22,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <com.twitter.sdk.android.tweetui.internal.util.AspectRatioImageView
+    <com.twitter.sdk.android.core.internal.util.AspectRatioImageView
         tools:ignore="ContentDescription"
         android:id="@+id/tw__tweet_media"
         style="@style/tw__TweetMedia"/>
