--- a/tweet-composer/src/main/res/layout/tw__composer_view.xml
+++ b/tweet-composer/src/main/res/layout/tw__composer_view.xml
@@ -46,7 +46,13 @@
             tools:ignore="ContentDescription"/>
     </RelativeLayout>
 
-    <ScrollView
+    <View
+        android:id="@+id/tw__composer_profile_divider"
+        android:visibility="invisible"
+        style="@style/tw__ComposerDivider"/>
+
+    <com.twitter.sdk.android.core.internal.util.ObservableScrollView
+        android:id="@+id/tw__composer_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -68,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/tw__card_spacing_large"/>
         </LinearLayout>
-    </ScrollView>
+    </com.twitter.sdk.android.core.internal.util.ObservableScrollView>
 
     <View
         android:id="@+id/tw__composer_toolbar_divider"
