--- a/tweet-composer/src/main/res/values/colors.xml
+++ b/tweet-composer/src/main/res/values/colors.xml
@@ -16,13 +16,11 @@
   -->
 
 <resources>
-    <color name="tw__composer_blue">#55acee</color>
-    <color name="tw__faded_blue">#bbddf5</color>
-    <color name="tw__tweet_white">#88ffffff</color>
-    <color name="tw__tweet_text">#292f33</color>
-    <color name="tw__deep_gray">#8899A6</color>
-    <color name="tw__light_gray">#CCD6DD</color>
-    <color name="tw__composer_error">#dd2e44</color>
-
-    <color name="tw__tweet_media_preview_bg_color">#e5e5e5</color>
+    <color name="tw__composer_blue">#ff1da1f2</color>
+    <color name="tw__composer_blue_text">#ff1b95e0</color>
+    <color name="tw__composer_white">#ffffffff</color>
+    <color name="tw__composer_black">#ff292f33</color>
+    <color name="tw__composer_deep_gray">#ff8899A6</color>
+    <color name="tw__composer_light_gray">#ffccd6dd</color>
+    <color name="tw__composer_red">#ffe81c4f</color>
 </resources>
