--- a/tweet-composer/src/main/res/drawable/tw__app_info_layout_border.xml
+++ b/tweet-composer/src/main/res/drawable/tw__app_info_layout_border.xml
@@ -19,11 +19,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners
-        android:bottomLeftRadius="@dimen/tw__corner_radius_medium"
-        android:bottomRightRadius="@dimen/tw__corner_radius_medium"
+        android:bottomLeftRadius="@dimen/tw__card_radius_medium"
+        android:bottomRightRadius="@dimen/tw__card_radius_medium"
         android:topLeftRadius="0dp"
         android:topRightRadius="0dp"/>
     <stroke
         android:width="1dp"
-        android:color="@color/tw__light_gray"/>
+        android:color="@color/tw__composer_light_gray"/>
 </shape>
