--- a/tweet-composer/src/main/res/drawable/tw__btn_composer_tweet.xml
+++ b/tweet-composer/src/main/res/drawable/tw__btn_composer_tweet.xml
@@ -16,20 +16,29 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true"
+          android:state_enabled="true">
+        <shape android:shape="rectangle">
+            <solid android:color="@color/tw__composer_blue_text" />
+            <corners android:radius="@dimen/tw__composer_tweet_btn_radius" />
+            <padding android:left="@dimen/tw__card_spacing_medium"
+                     android:right="@dimen/tw__card_spacing_medium" />
+        </shape>
+    </item>
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <solid android:color="@color/tw__composer_blue" />
-            <corners android:radius="@dimen/tw__btn_tweet_post_radius" />
-            <padding android:left="@dimen/tw__btn_tweet_post_left_padding"
-                     android:right="@dimen/tw__btn_tweet_post_right_padding" />
+            <corners android:radius="@dimen/tw__composer_tweet_btn_radius" />
+            <padding android:left="@dimen/tw__card_spacing_medium"
+                     android:right="@dimen/tw__card_spacing_medium" />
         </shape>
     </item>
     <item android:state_enabled="false">
         <shape android:shape="rectangle">
-            <solid android:color="@color/tw__faded_blue" />
-            <corners android:radius="@dimen/tw__btn_tweet_post_radius" />
-            <padding android:left="@dimen/tw__btn_tweet_post_left_padding"
-                     android:right="@dimen/tw__btn_tweet_post_right_padding" />
+            <solid android:color="@color/tw__composer_light_gray" />
+            <corners android:radius="@dimen/tw__composer_tweet_btn_radius" />
+            <padding android:left="@dimen/tw__card_spacing_medium"
+                     android:right="@dimen/tw__card_spacing_medium" />
         </shape>
     </item>
 </selector>
