--- a/tweet-composer/src/main/res/values/dimens.xml
+++ b/tweet-composer/src/main/res/values/dimens.xml
@@ -16,44 +16,19 @@
   -->
 
 <resources>
-
-    <!--Close icon-->
     <dimen name="tw__composer_close_size">48dp</dimen>
-    <dimen name="tw__composer_padding">14dp</dimen>
-    <dimen name="tw__composer_close_margin_top">5dp</dimen>
-    <dimen name="tw__composer_close_margin_left">-4dp</dimen>
+    <dimen name="tw__composer_logo_height">20dp</dimen>
+    <dimen name="tw__composer_logo_width">24dp</dimen>
+    <dimen name="tw__composer_avatar_size">32dp</dimen>
+    <dimen name="tw__composer_divider_height">1dp</dimen>
+    <dimen name="tw__composer_tweet_btn_height">36dp</dimen>
+    <dimen name="tw__composer_tweet_btn_radius">4dp</dimen>
+    <dimen name="tw__composer_char_count_height">36dp</dimen>
 
-    <!--Twitter Logo-->
-    <dimen name="tw__composer_logo_size">32dp</dimen>
-    <dimen name="tw__composer_logo_margin_top">18dp</dimen>
-
-    <!--Author Avatar-->
-    <dimen name="tw__composer_avatar_size">36dp</dimen>
-    <dimen name="tw__composer_avatar_margin_top">10dp</dimen>
-    <dimen name="tw__composer_avatar_margin_right">12dp</dimen>
-
-    <!--Composer-->
-    <dimen name="tw__composer_edit_tweet_margin_top">8dp</dimen>
-    <dimen name="tw__composer_edit_tweet_margin_bottom">4dp</dimen>
-    <dimen name="tw__composer_edit_tweet_padding">10dp</dimen>
-
-    <!--Divider-->
-    <dimen name="tw__divider_size_small">1dp</dimen>
-
-    <!--Composer Toolbar-->
-    <dimen name="tw__composer_toolbar_padding_top">8dp</dimen>
-    <dimen name="tw__composer_toolbar_padding_bottom">8dp</dimen>
-
-    <!--Toolbar widgets-->
-    <dimen name="tw__btn_tweet_post_height">36dp</dimen>
-    <dimen name="tw__btn_tweet_post_radius">4dp</dimen>
-    <dimen name="tw__btn_tweet_post_left_padding">12dp</dimen>
-    <dimen name="tw__btn_tweet_post_right_padding">12dp</dimen>
-    <dimen name="tw__btn_tweet_post_min_width">67dp</dimen>
-    <dimen name="tw__btn_tweet_post_margin_right">12dp</dimen>
-
-    <dimen name="tw__char_count_height">36dp</dimen>
-    <dimen name="tw__char_count_margin_right">10dp</dimen>
+    <!-- Common spacing -->
+    <dimen name="tw__composer_spacing_small">4dp</dimen>
+    <dimen name="tw__composer_spacing_medium">8dp</dimen>
+    <dimen name="tw__composer_spacing_large">16dp</dimen>
 
     <!--text sixes-->
     <dimen name="tw__composer_font_size_small">14sp</dimen>
@@ -64,7 +39,8 @@
     <dimen name="tw__card_spacing_small">4dp</dimen>
     <dimen name="tw__card_spacing_medium">8dp</dimen>
     <dimen name="tw__card_spacing_large">16dp</dimen>
-    <dimen name="tw__corner_radius_small">4dp</dimen>
-    <dimen name="tw__corner_radius_medium">6dp</dimen>
+    <dimen name="tw__card_radius_small">4dp</dimen>
+    <dimen name="tw__card_radius_medium">6dp</dimen>
+    <dimen name="tw__card_maximum_width">400dp</dimen>
 
 </resources>
