Add dark composer theme
Change-Id: I224cd793a9dae1f1651309b3988d3fc6780ec43e

--- a/tweet-composer/src/main/res/layout/tw__composer_view.xml
+++ b/tweet-composer/src/main/res/layout/tw__composer_view.xml
@@ -36,7 +36,7 @@
             android:id="@+id/tw__twitter_logo"
             android:layout_height="@dimen/tw__composer_logo_height"
             android:layout_width="@dimen/tw__composer_logo_width"
-            android:src="@drawable/tw__ic_logo_blue"
+            android:src="?attr/tw__twitter_logo"
             android:layout_centerInParent="true"
             tools:ignore="ContentDescription"/>
 
