--- a/tweet-composer/src/main/res/values/tw__composer_styles.xml
+++ b/tweet-composer/src/main/res/values/tw__composer_styles.xml
@@ -47,12 +47,12 @@
         <item name="android:inputType">textMultiLine</item>
         <item name="android:background">@null</item>
         <item name="android:gravity">top|left</item>
-        <item name="android:textColor">@color/tw__composer_black</item>
+        <item name="android:textColor">?android:attr/textColor</item>
         <item name="android:scrollbars">vertical</item>
         <item name="android:cursorVisible">true</item>
         <item name="android:textCursorDrawable">@null</item>
         <item name="android:hint">@string/tw__composer_hint</item>
-        <item name="android:textColorHint">@color/tw__composer_light_gray</item>
+        <item name="android:textColorHint">?android:attr/textColorHint</item>
         <item name="android:imeOptions">actionSend</item>
         <item name="android:imeActionLabel">@string/tw__post_tweet</item>
     </style>
