Add love (like hearts)
* Change view favorite assets, buttons, and actions to like
* Leave Twitter API, Tweet fields, and scribe as favorite

Change-Id: I1b086c99fa4154fedb156e8fc09f5f8a5ae62689

--- a/tweet-ui/src/main/res/layout/tw__action_bar.xml
+++ b/tweet-ui/src/main/res/layout/tw__action_bar.xml
@@ -26,11 +26,11 @@
     tools:visibility="visible">
 
     <com.twitter.sdk.android.tweetui.ToggleImageButton
-        android:id="@+id/tw__tweet_favorite_button"
+        android:id="@+id/tw__tweet_like_button"
         style="@style/tw__TweetActionButton"
-        android:src="@drawable/tw__favorite_action"
-        twitter:contentDescriptionOff="@string/tw__favorited_tweet"
-        twitter:contentDescriptionOn="@string/tw__favorite_tweet"
+        android:src="@drawable/tw__like_action"
+        twitter:contentDescriptionOff="@string/tw__like_tweet"
+        twitter:contentDescriptionOn="@string/tw__liked_tweet"
         android:layout_marginRight="@dimen/tw__tweet_action_button_spacing"/>
 
     <ImageButton
