Add like heart animations for API 21+
Change-Id: I18bfcc4e61744c0c2d5c4192e0086e12b517a1b9

--- a/tweet-ui/src/main/res/layout/tw__tweet.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet.xml
@@ -99,4 +99,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tw__tweet_text"/>
 
+    <View
+        android:id="@+id/bottom_separator"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/tw__tweet_container_bottom_separator"
+        android:layout_below="@id/tw__tweet_text"/>
+
 </RelativeLayout>
