--- a/tweet-ui/src/main/res/layout/tw__action_bar.xml
+++ b/tweet-ui/src/main/res/layout/tw__action_bar.xml
@@ -27,7 +27,7 @@
 
     <com.twitter.sdk.android.tweetui.ToggleImageButton
         android:id="@+id/tw__tweet_like_button"
-        style="@style/tw__TweetActionButton"
+        style="@style/tw__TweetActionButton.Heart"
         android:src="@drawable/tw__like_action"
         twitter:contentDescriptionOff="@string/tw__like_tweet"
         twitter:contentDescriptionOn="@string/tw__liked_tweet"
