--- a/tweet-ui/src/main/res/values/tw__tweet_actions_styles.xml
+++ b/tweet-ui/src/main/res/values/tw__tweet_actions_styles.xml
@@ -20,11 +20,17 @@
     <style name="tw__TweetActionButton">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:padding">@dimen/tw__tweet_action_button_padding</item>
+        <item name="android:layout_marginTop">@dimen/tw__tweet_action_button_margin_top</item>
+    </style>
+
+    <style name="tw__TweetActionButton.Heart">
+        <item name="android:layout_width">@dimen/tw__tweet_action_heart_size</item>
+        <item name="android:layout_height">@dimen/tw__tweet_action_heart_size</item>
     </style>
 
     <style name="tw__TweetActionButton.Share">
         <item name="android:background">@null</item>
+        <item name="android:padding">@dimen/tw__tweet_action_share_padding</item>
     </style>
 
     <style name="tw__TweetActionButtonBar">
