Add basic video player
Change-Id: I550d5be7b0e3c74cddca73f6f68142067d023099

--- a/tweet-ui/src/main/res/layout/tw__player_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__player_activity.xml
@@ -15,17 +15,12 @@
   ~
   -->
 
-<manifest
-    package="com.twitter.sdk.android.tweetui"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <VideoView
+        android:id="@+id/video_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"/>
 
-    <application>
-        <activity
-            android:name=".PlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/PlayerTheme"/>
-    </application>
-
-</manifest>
+</merge>
