--- a/tweet-ui/src/main/res/drawable/tw__player_overlay.xml
+++ b/tweet-ui/src/main/res/drawable/tw__player_overlay.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2015 Twitter, Inc.
   ~
@@ -15,17 +16,11 @@
   ~
   -->
 
-<manifest
-    package="com.twitter.sdk.android.tweetui"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <application>
-        <activity
-            android:name=".PlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/PlayerTheme"/>
-    </application>
-
-</manifest>
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_pressed="true">
+        <bitmap android:src="@drawable/tw__ic_play_pressed" android:gravity="center"/>
+    </item>
+    <item>
+        <bitmap android:src="@drawable/tw__ic_play_default" android:gravity="center"/>
+    </item>
+</selector>
