--- a/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
+++ b/tweet-ui/src/main/res/layout/tw__tweet_compact.xml
@@ -68,7 +68,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"/>
 
-    <com.twitter.sdk.android.core.internal.util.AspectRatioImageView
+    <com.twitter.sdk.android.tweetui.internal.TweetMediaView
         tools:ignore="ContentDescription"
         android:id="@+id/tw__tweet_media"
         style="@style/tw__TweetMedia.Compact"
