--- a/tweet-ui/src/main/res/values-v21/themes.xml
+++ b/tweet-ui/src/main/res/values-v21/themes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2015 Twitter, Inc.
   ~
@@ -12,20 +13,10 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
-  ~
   -->
 
-<manifest
-    package="com.twitter.sdk.android.tweetui"
-    xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <uses-permission android:name="android.permission.INTERNET"/>
-
-    <application>
-        <activity
-            android:name=".PlayerActivity"
-            android:configChanges="keyboardHidden|orientation|screenSize"
-            android:theme="@style/PlayerTheme"/>
-    </application>
-
-</manifest>
+<resources>
+    <style name="PlayerTheme" parent="@android:style/Theme.Material.NoActionBar" >
+        <item name="android:windowBackground">@android:color/black</item>
+    </style>
+</resources>
