Pull VideoView from AOSP to fix memory leak
Change-Id: I95d88afa546b961a8c31cfffc8180d7fc20332f7

--- a/tweet-ui/src/main/res/layout/tw__player_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__player_activity.xml
@@ -17,7 +17,7 @@
 
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <VideoView
+    <com.twitter.sdk.android.tweetui.internal.VideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
