Add basic photo viewer
* Supports pinch zoom, drag, and double tap.

Change-Id: I0e77b76ce65f59f973e4ba8afbd2acfa7c315825

--- a/tweet-ui/src/main/res/values-v11/themes.xml
+++ b/tweet-ui/src/main/res/values-v11/themes.xml
@@ -17,7 +17,7 @@
 
 <resources>
 
-    <style name="PlayerTheme" parent="@android:style/Theme.Holo">
+    <style name="MediaTheme" parent="@android:style/Theme.Holo">
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/black</item>
