--- a/tweet-ui/src/main/res/layout/tw__gallery_activity.xml
+++ b/tweet-ui/src/main/res/layout/tw__gallery_activity.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Copyright (C) 2015 Twitter, Inc.
   ~
@@ -13,10 +12,15 @@
   ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
+  ~
   -->
 
-<resources>
-    <style name="MediaTheme" parent="@android:style/Theme.Material.NoActionBar" >
-        <item name="android:windowBackground">@android:color/black</item>
-    </style>
-</resources>
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+
+    <com.twitter.sdk.android.tweetui.internal.MultiTouchImageView
+        android:id="@+id/image_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</merge>
